fix(ci): trigger image build and use dynamic tags for feature branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run All CI Checks
+        env:
+          CI_IMAGE_TAG: ${{ github.ref_name }}
         run: docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm ci-runner 
