--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "squizlabs/php_codesniffer": "^3.7",
         "wp-coding-standards/wpcs": "^3.0",
         "phpcsstandards/phpcsutils": "^1.0",
-        "phpcsstandards/phpcsextra": "^1.1"
+        "phpcsstandards/phpcsextra": "^1.1",
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.0"
     },
     "config": {
         "allow-plugins": {
