feat: Achieve 100% PHPCS compliance and enhance documentation
- Fix all 70+ PHPCS errors across 9 PHP files (0 errors remaining)
- Implement comprehensive SQL query preparation with proper placeholders
- Add mandatory caching patterns for database operations
- Enforce WordPress coding standards for input/output handling
- Update comment punctuation to meet PHPCS requirements
- Replace deprecated functions with WordPress alternatives
- Add comprehensive PHPCS compliance documentation
- Establish date-agnostic language standards in documentation
- Update Cursor rules to prevent future compliance regressions

Technical improvements:
- SQL queries now use {->prefix}table_name format
- All user input properly sanitized with WordPress functions
- All output escaped with esc_html(), esc_url(), esc_attr()
- Caching implemented for expensive database operations
- Complete docblocks with @param, @return, @throws tags
- PHPCS ignore comments include explanations where necessary

Documentation updates:
- Enhanced TROUBLESHOOTING.md with PHPCS solutions
- Created PHPCS-COMPLIANCE-ACHIEVEMENT.md with technical details
- Updated .cursorrules with mandatory compliance standards
- Eliminated hardcoded dates throughout documentation
- Added prevention rules for future date references

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,6 +1,20 @@
 # This file is for CI/CD environments (GitHub Actions).
 # It overrides the ci-runner service to use a pre-built image from GHCR.
 services:
+  db-nonprod:
+    image: mariadb:10.5
+    restart: always
+    environment:
+      MYSQL_DATABASE: wordpress
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_USER: wordpress
+      MYSQL_PASSWORD: wordpress
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   ci-runner:
     image: ghcr.io/solidsystems/wp-qr-trackr/ci-runner:${CI_IMAGE_TAG:-main}
     depends_on:
