Implement TODO automation system with GitHub Projects integration
- Add scripts/update-todo-index.sh for syncing Cursor todos with markdown files
- Add scripts/setup-github-projects.sh for GitHub Projects integration
- Update TODO.md with comprehensive task tracking and automation notes
- Update STATUS.md with latest completion status
- Establish dual system: Cursor todos for active development, markdown for documentation
- Add automatic backup system for TODO and STATUS files
- Create foundation for MCP enhancements project tracking

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,7 @@ services:
       WORDPRESS_DB_NAME: wpdb
       WP_HOME: http://localhost:8080
       WP_SITEURL: http://localhost:8080
+      PHP_MEMORY_LIMIT: 1024M
     volumes:
       - ./wp-content/plugins/wp-qr-trackr:/var/www/html/wp-content/plugins/wp-qr-trackr
       - ./php.ini:/usr/local/etc/php/conf.d/99-custom.ini
