--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,10 @@ jobs:
     permissions:
       contents: read
       packages: read
+    strategy:
+      matrix:
+        php-version: [8.1, 8.2]
+        wordpress-version: [6.4, latest]
 
     steps:
       - name: Checkout code
@@ -82,7 +86,7 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: ${{ matrix.php-version }}
       - name: Install Lefthook
         run: curl -s https://raw.githubusercontent.com/evilmartians/lefthook/master/scripts/install.sh | bash
       - name: Run Lefthook pre-push
