--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
       - name: Install Lefthook
-        run: curl -s https://raw.githubusercontent.com/evilmartians/lefthook/master/scripts/install.sh | bash
+        run: curl -1sLf 'https://dl.cloudsmith.io/public/evilmartians/lefthook/setup.sh' | bash
       - name: Run Lefthook pre-push
         run: lefthook run pre-push
 
