--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,9 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
       - name: Install Lefthook
-        run: curl -1sLf 'https://dl.cloudsmith.io/public/evilmartians/lefthook/setup.sh' | bash
+        run: |
+          curl -1sLf 'https://dl.cloudsmith.io/public/evilmartians/lefthook/setup.sh' | bash
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Run Lefthook pre-push
         run: lefthook run pre-push
 
