--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.ci
+          file: ./docker/Dockerfile.ci
           push: true
           tags: ghcr.io/${{ github.repository }}/ci-runner:latest
           cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/ci-runner:latest
