chore: replace npm with yarn in PHPUnit workflow for Node.js dependencies

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install Node.js dependencies
         run: |
           if [ -f package.json ]; then
-            npm install
+            yarn install
           fi
 
       - name: Install SVN
