ci: add debug steps and explicit working directory for troubleshooting

--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -1,6 +1,7 @@
 services:
   ci-runner:
     image: ghcr.io/solidsystems/wp-qr-trackr/ci-runner:${CI_IMAGE_TAG:-latest}
+    working_dir: /usr/src/app
     environment:
       # If you need a DB, define a minimal db service and update these vars accordingly
       # WORDPRESS_DB_HOST: db:3306
