ci: fix volume mount to point to project root instead of docker directory

--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -10,5 +10,5 @@ services:
       # WORDPRESS_DB_PASSWORD: wppass
       CI: 1
     volumes:
-      - .:/usr/src/app
+      - ..:/usr/src/app
       - ~/.config/gh:/root/.config/gh
