--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -1,13 +1,33 @@
 services:
+  db:
+    image: mariadb:10.5
+    environment:
+      MYSQL_DATABASE: wpdb
+      MYSQL_USER: wpuser
+      MYSQL_PASSWORD: wppass
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
   ci-runner:
-    image: ghcr.io/solidsystems/wp-qr-trackr/ci-runner:${CI_IMAGE_TAG:-latest}
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.ci
     working_dir: /usr/src/app
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       # If you need a DB, define a minimal db service and update these vars accordingly
-      # WORDPRESS_DB_HOST: db:3306
-      # WORDPRESS_DB_NAME: wpdb
-      # WORDPRESS_DB_USER: wpuser
-      # WORDPRESS_DB_PASSWORD: wppass
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_NAME: wpdb
+      WORDPRESS_DB_USER: wpuser
+      WORDPRESS_DB_PASSWORD: wppass
       CI: 1
     volumes:
       - ..:/usr/src/app
