chore: add automated PR creation script and Makefile target for CLI P… (#24)
* chore: add automated PR creation script and Makefile target for CLI PRs (single-quote safe)

* ci: upgrade CI workflow to PHP 8.2 for dependency compatibility

* ci: remove PHP 8.0 from matrix, test only on 8.1 and 8.2 for dependency compatibility

* ci: fix install-wp-tests.sh path in phpunit workflow

* ci: update Lefthook install to use official Cloudsmith script

* ci: add Lefthook install path to GITHUB_PATH for CI jobs

* ci: remove PHP 8.0 from phpunit workflow matrix for dependency compatibility

* ci: explicitly export Lefthook bin path in run step for CI

* ci: ensure Lefthook is only used in CI/test jobs, not in deployment; update Dockerfile.ci for persistent Lefthook

* ci: install svn before running install-wp-tests.sh for WordPress test suite

* ci: add MySQL service and use service hostname for WordPress tests

* ci: run test job in container for MySQL service hostname support

* ci: remove Lefthook step from GHA test job (container-only enforcement)

* ci: always build and push CI image on every push/PR for test job availability

* ci: run Docker image build/push for all branches

* fix: correct Dockerfile.ci path in CI workflows

* fix: correct docker-compose file paths in CI workflow

* chore: re-enable TODO index automation workflow

* ci: remove unnecessary PHP setup step from test job (PHP provided by Docker image)

* ci: remove unnecessary PHP setup from PHPUnit workflow (container provides PHP/Composer)

* chore: add placeholder STATUS.md for TODO automation

* fix: add STATUS.md to project root for automation compatibility

* chore: replace npm with yarn in PHPUnit workflow for Node.js dependencies

* feat: add dry run logic to build-release.sh for safe CD testing

* chore: add debug steps to check file presence before Docker build in CI workflow

* fix: remove sudo from apt-get in PHPUnit workflow (container runs as root)

* chore: add debug step to list WordPress

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,29 +3,13 @@ name: CI
 on:
   push:
     branches:
-      - main
-      - 'feature/**'
+      - '**'
   pull_request:
 
 jobs:
   build_image:
     name: Build and Push CI Image
     runs-on: ubuntu-latest
-    # This job only runs when dependency files are changed.
-    if: |
-      github.event_name == 'push' &&
-      contains(join(github.event.commits.*.message, ' '), '#build-ci') ||
-      (
-        github.event_name == 'push' &&
-        (
-          contains(join(github.event.commits.*.modified, ' '), 'Dockerfile.ci') ||
-          contains(join(github.event.commits.*.modified, ' '), 'composer.json') ||
-          contains(join(github.event.commits.*.modified, ' '), 'composer.lock') ||
-          contains(join(github.event.commits.*.modified, ' '), 'package.json') ||
-          contains(join(github.event.commits.*.modified, ' '), 'yarn.lock') ||
-          contains(join(github.event.commits.*.modified, ' '), 'ci.sh')
-        )
-      )
     permissions:
       contents: read
       packages: write
@@ -41,6 +25,33 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: List workspace files
+        run: |
+          echo "Root directory:"
+          ls -l
+          echo "scripts directory:"
+          ls -l scripts
+
+      - name: Check for required files
+        run: |
+          for f in ci.sh composer.json composer.lock package.json yarn.lock; do
+            if [ -f "$f" ]; then
+              echo "Found $f"
+            else
+              echo "Missing $f"
+            fi
+          done
+          if [ -f scripts/wait-for-it.sh ]; then
+            echo "Found scripts/wait-for-it.sh"
+          else
+            echo "Missing scripts/wait-for-it.sh"
+          fi
+
+      - name: List all files in workspace
+        run: |
+          echo "Full workspace file tree:"
+          find . -type f | sort
+
       - name: Extract metadata (tags and labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -54,10 +65,12 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.ci
+          file: ./docker/Dockerfile.ci
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/${{ github.repository }}/ci-runner:latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/ci-runner:latest
+          cache-to: type=inline
+          provenance: false
 
   test:
     name: Run All CI Checks
@@ -67,6 +80,10 @@ jobs:
     permissions:
       contents: read
       packages: read
+    strategy:
+      matrix:
+        php-version: [8.1, 8.2]
+        wordpress-version: [6.4, latest]
 
     steps:
       - name: Checkout code
@@ -79,16 +96,11 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Lefthook
-        run: curl -s https://raw.githubusercontent.com/evilmartians/lefthook/master/scripts/install.sh | bash
-      - name: Run Lefthook pre-push
-        run: lefthook run pre-push
-
       - name: Sanitize image tag
         id: sanitize
-        run: echo "tag=$(echo ${{ github.ref_name }} | sed 's/\//-/g')" >> $GITHUB_OUTPUT
+        run: echo "tag=latest" >> $GITHUB_OUTPUT
 
       - name: Run All CI Checks
         env:
           CI_IMAGE_TAG: ${{ steps.sanitize.outputs.tag }}
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm ci-runner
+        run: docker compose -f docker/docker-compose.ci.yml run --rm ci-runner
