--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -1,30 +1,34 @@
 services:
-  db-nonprod:
+  db:
     image: mariadb:10.5
-    restart: always
     environment:
-      MYSQL_DATABASE: wordpress
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_DATABASE: wpdb
+      MYSQL_USER: wpuser
+      MYSQL_PASSWORD: wppass
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      test: ["CMD", "mysqladmin", "ping", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   ci-runner:
-    image: ghcr.io/solidsystems/wp-qr-trackr/ci-runner:${CI_IMAGE_TAG:-main}
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile.ci
+    working_dir: /usr/src/app
     depends_on:
-      db-nonprod:
+      db:
         condition: service_healthy
     environment:
-      WORDPRESS_DB_HOST: db-nonprod:3306
-      WORDPRESS_DB_NAME: wordpress
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
+      # If you need a DB, define a minimal db service and update these vars accordingly
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_NAME: wpdb
+      WORDPRESS_DB_USER: wpuser
+      WORDPRESS_DB_PASSWORD: wppass
       CI: 1
     volumes:
-      - .:/usr/src/app
-      - ./vendor:/usr/src/app/vendor
-      - ~/.config/gh:/root/.config/gh 
+      - ..:/usr/src/app
+      - ~/.config/gh:/root/.config/gh
