refactor: reorganize configuration files for cleaner repository structure
- Moved all configuration files to organized config/ directory structure
- Created config/ci/ for CI/CD configuration (.phpcs.xml, lefthook.yml, etc.)
- Created config/editor/ for editor/IDE configuration (.editorconfig, .vscode/, eslint.config.js)
- Created config/build/ for build/release configuration (.distignore)
- Created config/testing/ for testing configuration (e2e.config.json, phpunit.xml.dist)
- Moved environment files (.env, .env.example) to config/
- Updated all file references in scripts, documentation, and CI/CD workflows
- Added comprehensive config/README.md explaining the organization
- Removed empty mysql.cnf directory
- Cleaned up root directory for better public consumption

--- a/.gitignore
+++ b/.gitignore
@@ -82,10 +82,10 @@ wp-content/backup-db/
 wp-content/cache/
 wp-content/backups/
 
-# Environment files
-.env
-.env.*
-!.env.example
+# Environment files (alternative patterns)
+config/.env
+config/.env.*
+!config/.env.example
 
 # Logs
 *.log
