--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "wordpress-plugin",
     "license": "GPL-2.0-or-later",
     "require": {
-        "php": ">=7.4"
+        "php": ">=8.1",
+        "endroid/qr-code": "^4.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
