Add PHPCS step to GitHub Actions workflow\n\n- Added PHPCS validation step to CI/CD pipeline\n- Configured PHPCS to check WordPress coding standards\n- Excluded node_modules and vendor directories\n- Now CI will fail if code quality standards are not met\n\nThis ensures that code quality is enforced in the CI/CD pipeline.

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -58,5 +58,8 @@ jobs:
             echo "Missing /tmp/wordpress-tests-lib"
           fi
 
+      - name: Run PHPCS
+        run: ./vendor/bin/phpcs --standard=WordPress --extensions=php --ignore=node_modules,vendor wp-content/plugins/wp-qr-trackr/
+
       - name: Run PHPUnit
         run: ./vendor/bin/phpunit
