Fix GitHub Actions workflow and remove Playwright from CI\n\n- Fixed PHPUnit configuration path to use correct config file\n- Removed debug step that was causing YAML syntax issues\n- Removed Playwright tests from CI (keep e2e tests local only)\n- Simplified workflow to focus on PHPCS and PHPUnit only\n\nThis ensures CI runs only unit tests and code quality checks,\nwhile e2e tests remain local for development.

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -48,18 +48,8 @@ jobs:
         run: |
           bash scripts/install-wp-tests.sh wpdb wpuser wppass mysql ${{ matrix.wp }}
 
-      - name: Debug: List WordPress test suite directory
-        run: |
-          if [ -d /tmp/wordpress-tests-lib ]; then
-            echo "Found /tmp/wordpress-tests-lib"
-            ls -l /tmp/wordpress-tests-lib
-            ls -l /tmp/wordpress-tests-lib/includes
-          else
-            echo "Missing /tmp/wordpress-tests-lib"
-          fi
-
       - name: Run PHPCS
         run: ./vendor/bin/phpcs --standard=WordPress --extensions=php --ignore=node_modules,vendor wp-content/plugins/wp-qr-trackr/
 
       - name: Run PHPUnit
-        run: ./vendor/bin/phpunit
+        run: ./vendor/bin/phpunit --configuration=config/testing/phpunit.xml.dist
